# injective_lottery

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml
artifacts/: checksums.txt  lottery-aarch64.wasm
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  join_lottery_msg.json  lottery_state.json  query_msg.json  round_info_query.json
src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
src/schema/: execute_msg.json  instantiate_msg.json  update_config_msg.json
