[package]
name = "lottery"
version = "0.1.0"
authors = ["ricqCodes <princenwakanma1996@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.5.0", default-features = false }
cosmwasm-schema = { version = "1.4.0" }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "1.1.0"
cw721 = "0.18.0"
cw20 = "1.1.2"
cw2 = "0.13.2"
schemars = "0.8.15"
nois = "0.8.0"
dotenv = "0.15.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
getrandom = { version = "0.2.6", features = ["js"] }


[dev-dependencies]
cw-multi-test = "0.13.2"
cw-utils = "1.0.1"
